added docs for endpoint handlers
